src/test/ui/parser/extern-crate-unexpected-token.stderr
error: expected one of `crate`, `fn`, or `{`, found `crte`
  --> $DIR/extern-crate-unexpected-token.rs:3:8
   |
LL | extern crte foo; //~ ERROR expected one of `crate`, `fn`, or `{`, found `crte`
   |        ^^^^ expected one of `crate`, `fn`, or `{` here

error: aborting due to previous error

