src/test/ui/parser/extern-crate-unexpected-token.rs
// compile-flags: -Z parse-only

extern crte foo; //~ ERROR expected one of `crate`, `fn`, or `{`, found `crte`
